Added missing Artifacts

--- a/src/EmployeeManagement.Web/Components/App.razor
+++ b/src/EmployeeManagement.Web/Components/App.razor
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="@Assets["app.css"]" />
     <link rel="stylesheet" href="@Assets["EmployeeManagement.Web.styles.css"]" />
     
+    <!-- Font Awesome for loading icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    
     <!-- DevExpress Blazor CSS - Updated for Bootstrap 5 External Theme -->
     <link href="_content/DevExpress.Blazor.Themes/bootstrap-external.bs5.min.css" rel="stylesheet" />
     <!-- DevExpress Blazor Icons -->
