--- a/src/EmployeeManagement.Web/Components/_Imports.razor
+++ b/src/EmployeeManagement.Web/Components/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.JSInterop
 @using EmployeeManagement.Web
 @using EmployeeManagement.Web.Components
+@using EmployeeManagement.Web.Components.Shared
 @using DevExpress.Blazor
 @using System.ComponentModel.DataAnnotations
